--- a/src/app/pages/book-details/book-details.page.html
+++ b/src/app/pages/book-details/book-details.page.html
@@ -16,6 +16,7 @@
         <p>Author: {{book?.author}}</p>
         <p>ISBN: {{book?.isbn}}</p>
         <p>Price: {{book?.price}}</p>
+        <p>Description: {{book?.description}}</p>
       </ion-text>
     </ion-card-header>
   </ion-card>
