--- a/src/app/pages/books/books.page.html
+++ b/src/app/pages/books/books.page.html
@@ -1,15 +1,112 @@
-<ion-header>
-  <ion-toolbar color="primary">
-    <ion-title>Conors Library</ion-title>
+<ion-header class="ion-no-border">
+  <ion-toolbar color="primary" no-border>
+    <ion-buttons slot="start">
+      <ion-button>
+        <img src="../../../assets/menu.svg" />
+      </ion-button>
+    </ion-buttons>
+
+    <ion-title>Home</ion-title>
+
+    <ion-buttons slot="end">
+      <ion-button>
+        <img src="../../../assets/notification.svg" />
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <ion-list>
-    <ion-item button *ngFor="let book of books" [routerLink]="[book.id]">
-      <ion-label>{{book.title}}
-        <p>{{book.author}}</p>
-      </ion-label>
-    </ion-item>
-  </ion-list>
+<ion-content [fullscreen]="true">
+  <div class="banner">
+    <img src="../../../assets/appBanner.png">
+    <div class="caption" ion-padding>
+      Conors <br>
+      Library
+    </div>
+    <div class="search">
+      <ion-item lines="none" class="ion-no-padding">
+        <ion-icon slot="start" name="search-outline"></ion-icon>
+        <ion-input placeholder="Search books"></ion-input>
+      </ion-item>
+    </div>
+  </div>
+
+  
+  <ion-col>
+      <ion-card button *ngFor="let book of books" [routerLink]="[book.id]">
+        <ion-card-content>
+          <p class="title">{{book.title}}</p>
+          <p class="author">By {{book.author}}</p>
+          <p class="price">price: {{book.price}}</p>
+          <p class="isbn">ISBN: {{book.isbn}}</p>
+        </ion-card-content>
+      </ion-card>
+  </ion-col>
+
+  <ion-col *ngIf="!isDataLoaded">
+    <ion-card>
+      <ion-card-content>
+        <ion-skeleton-text class="title" animated style="width: 90%"></ion-skeleton-text>
+        <ion-skeleton-text class="author" animated style="width: 40%"></ion-skeleton-text>
+        <ion-skeleton-text class="price" animated style="width: 20%"></ion-skeleton-text>
+        <ion-skeleton-text class="isbn" animated style="width: 20%"></ion-skeleton-text>
+      </ion-card-content>
+    </ion-card>
+    <ion-card>
+      <ion-card-content>
+        <ion-skeleton-text class="title" animated style="width: 90%"></ion-skeleton-text>
+        <ion-skeleton-text class="author" animated style="width: 40%"></ion-skeleton-text>
+        <ion-skeleton-text class="price" animated style="width: 20%"></ion-skeleton-text>
+        <ion-skeleton-text class="isbn" animated style="width: 20%"></ion-skeleton-text>
+      </ion-card-content>
+    </ion-card>
+    <ion-card>
+      <ion-card-content>
+        <ion-skeleton-text class="title" animated style="width: 90%"></ion-skeleton-text>
+        <ion-skeleton-text class="author" animated style="width: 40%"></ion-skeleton-text>
+        <ion-skeleton-text class="price" animated style="width: 20%"></ion-skeleton-text>
+        <ion-skeleton-text class="isbn" animated style="width: 20%"></ion-skeleton-text>
+      </ion-card-content>
+    </ion-card>
+    <ion-card>
+      <ion-card-content>
+        <ion-skeleton-text class="title" animated style="width: 90%"></ion-skeleton-text>
+        <ion-skeleton-text class="author" animated style="width: 40%"></ion-skeleton-text>
+        <ion-skeleton-text class="price" animated style="width: 20%"></ion-skeleton-text>
+        <ion-skeleton-text class="isbn" animated style="width: 20%"></ion-skeleton-text>
+      </ion-card-content>
+    </ion-card>
+    <ion-card>
+      <ion-card-content>
+        <ion-skeleton-text class="title" animated style="width: 90%"></ion-skeleton-text>
+        <ion-skeleton-text class="author" animated style="width: 40%"></ion-skeleton-text>
+        <ion-skeleton-text class="price" animated style="width: 20%"></ion-skeleton-text>
+        <ion-skeleton-text class="isbn" animated style="width: 20%"></ion-skeleton-text>
+      </ion-card-content>
+    </ion-card>
+    <ion-card>
+      <ion-card-content>
+        <ion-skeleton-text class="title" animated style="width: 90%"></ion-skeleton-text>
+        <ion-skeleton-text class="author" animated style="width: 40%"></ion-skeleton-text>
+        <ion-skeleton-text class="price" animated style="width: 20%"></ion-skeleton-text>
+        <ion-skeleton-text class="isbn" animated style="width: 20%"></ion-skeleton-text>
+      </ion-card-content>
+    </ion-card>
+    <ion-card>
+      <ion-card-content>
+        <ion-skeleton-text class="title" animated style="width: 90%"></ion-skeleton-text>
+        <ion-skeleton-text class="author" animated style="width: 40%"></ion-skeleton-text>
+        <ion-skeleton-text class="price" animated style="width: 20%"></ion-skeleton-text>
+        <ion-skeleton-text class="isbn" animated style="width: 20%"></ion-skeleton-text>
+      </ion-card-content>
+    </ion-card>
+    <ion-card>
+      <ion-card-content>
+        <ion-skeleton-text class="title" animated style="width: 90%"></ion-skeleton-text>
+        <ion-skeleton-text class="author" animated style="width: 40%"></ion-skeleton-text>
+        <ion-skeleton-text class="price" animated style="width: 20%"></ion-skeleton-text>
+        <ion-skeleton-text class="isbn" animated style="width: 20%"></ion-skeleton-text>
+      </ion-card-content>
+    </ion-card>
+</ion-col>
 </ion-content>
