--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,102 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+
+ion-header {
+    position: absolute;
+
+    ion-toolbar {
+        padding-left: 14px;
+        padding-right: 14px;
+    }
+
+    ion-title {
+        --color: white;
+        font-size: 18px;
+    }
+}
+
+ion-content {
+    .banner {
+        position: relative;
+        margin-bottom: 20px;
+        img {
+            width:100%;
+            height:210px;
+        }
+    }
+
+    .caption {
+        position:absolute;
+        width: 100%;
+        bottom: 55px;
+        font-size: 26px;
+        color: white;
+        padding-left: 26px;
+        padding-right: 26px;
+    }
+
+    .subCaption {
+        position:absolute;
+        width: 100%;
+        bottom: 20px;
+        font-size: 20px;
+        color: white;
+        text-align: center;
+        
+    }
+
+    .search {
+        position: absolute;
+        bottom: -40px;
+        width: calc(100% - 52px);
+        background: white;
+        margin: 16px 26px 16px 26px;
+        padding: 5px 16px 5px 16px;
+        border-radius: 10px;
+        box-shadow:0px 3px 12px 2px rgba(0, 0, 0, 0.16);
+    }
+
+    ion-item {
+        --inner-padding-end: 0 !important;  
+    }
+
+    ion-input {
+        --placeholder-color: #212121 !important;
+    }
+
+    ion-card {
+        width: 95%;
+        border-radius: 12px;
+        box-shadow:0px 4px 12px 2px rgba(0, 0, 0, 0.16);
+        margin-left: 0 auto !important;
+        margin-right: 0 auto !important;
+
+        ion-card-content {
+            .title {
+                color: var(--ion-color-primary);
+                font-size: 14px;
+                font-weight: bold;
+                margin-bottom: 5px; 
+            }
+
+            .author {
+                color: var(--ion-color-secondary);
+                font-size: 12px;
+                margin-bottom: 5px; 
+            }
+
+            .price {
+                float: left;
+                font-size: 10px;
+                margin-bottom: 5px; 
+            }
+
+            .isbn {
+                float: right;
+                font-size: 10px;
+            }
+        }
+    }
+}
