--- a/src/global.scss
+++ b/src/global.scss
@@ -25,7 +25,15 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
-
+@font-face {
+    font-family: 'Joan Regular';
+    src: url("assets/fonts/Joan-Regular.ttf");
+  }
+  
+  @font-face {
+    font-family: 'Play Fair Display';
+    src: url("assets/fonts/PlayfairDisplay-VariableFont_wght.ttf");
+  }
 ion-header {
     position: absolute;
 
@@ -55,6 +63,7 @@ ion-content {
         width: 100%;
         bottom: 55px;
         font-size: 26px;
+        font-family: "Joan Regular";
         color: white;
         padding-left: 26px;
         padding-right: 26px;
@@ -65,6 +74,7 @@ ion-content {
         width: 100%;
         bottom: 20px;
         font-size: 20px;
+        font-family: "Joan Regular";
         color: white;
         text-align: center;
         
@@ -99,26 +109,40 @@ ion-content {
         ion-card-content {
             .title {
                 color: var(--ion-color-primary);
-                font-size: 14px;
+                font-size: 18px;
                 font-weight: bold;
+                font-family: "Joan Regular";
                 margin-bottom: 5px; 
             }
-
+            
             .author {
                 color: var(--ion-color-secondary);
-                font-size: 12px;
+                font-family: "Joan Regular";
+                font-size: 16px;
                 margin-bottom: 5px; 
             }
 
             .price {
                 float: left;
-                font-size: 10px;
+                font-family: "Play Fair Display";
+                font-weight: bold;
+                font-size: 14px;
                 margin-bottom: 5px; 
             }
 
             .isbn {
                 float: right;
-                font-size: 10px;
+                font-family: "Play Fair Display";
+                font-weight: bold;
+                font-size: 14px;
+            }
+
+            .description {
+                color: var(--ion-color-secondary);
+                font-family: "Play Fair Display";
+                font-weight: bold;
+                font-size: 16px;
+                margin-bottom: 5px; 
             }
         }
     }
