Added sorting, Price label used instead of price number

--- a/src/app/pages/book-details/book-details.page.html
+++ b/src/app/pages/book-details/book-details.page.html
@@ -21,7 +21,7 @@
     <ion-card-content>
       <p class="title">Description:</p>
       <p class="description">{{book?.description}}</p>
-      <p class="price">price: {{book?.price}}</p>
+      <p class="price">price: {{book?.priceLabel}}</p>
       <p class="isbn">ISBN: {{book?.isbn}}</p>
     </ion-card-content>
   </ion-card>
