--- a/src/global.scss
+++ b/src/global.scss
@@ -34,6 +34,11 @@
     font-family: 'Play Fair Display';
     src: url("assets/fonts/PlayfairDisplay-VariableFont_wght.ttf");
   }
+
+:root {
+    --ion-font-family: "Joan Regular";
+}
+
 ion-header {
     position: absolute;
 
@@ -51,7 +56,7 @@ ion-header {
 ion-content {
     .banner {
         position: relative;
-        margin-bottom: 20px;
+        margin-bottom: 30px;
         img {
             width:100%;
             height:210px;
@@ -124,7 +129,7 @@ ion-content {
 
             .price {
                 float: left;
-                font-family: "Play Fair Display";
+                font-family: "Play Fair Display" !important;
                 font-weight: bold;
                 font-size: 14px;
                 margin-bottom: 5px; 
@@ -132,14 +137,14 @@ ion-content {
 
             .isbn {
                 float: right;
-                font-family: "Play Fair Display";
+                font-family: "Play Fair Display" !important;
                 font-weight: bold;
                 font-size: 14px;
             }
 
             .description {
                 color: var(--ion-color-secondary);
-                font-family: "Play Fair Display";
+                font-family: "Play Fair Display" !important;
                 font-weight: bold;
                 font-size: 16px;
                 margin-bottom: 5px; 
