--- a/src/app/pages/books/books.page.html
+++ b/src/app/pages/books/books.page.html
@@ -39,8 +39,10 @@
     <ion-select-option value="priceDescending">Price (Descending)</ion-select-option>
   </ion-select>
   <ion-col>
-    <ion-card button *ngFor="let book of books | filter:term" [routerLink]="[book.id]">
+    <ion-card button *ngFor="let book of books | filter:term" (click)="openBookDetailsPage(book.isWishlisted, book.id)">
       <ion-card-content>
+        <ion-icon *ngIf="!book.isWishlisted" class="wishlist" slot="icon-only" name="heart-outline"></ion-icon>
+        <ion-icon *ngIf="book.isWishlisted" class="wishlist" slot="icon-only" name="heart"></ion-icon>
         <p class="title">{{book.title}}</p>
         <p class="author">By {{book.author}}</p>
         <p class="price">price: {{book.priceLabel}}</p>
