--- a/src/app/pages/books/books.page.scss
+++ b/src/app/pages/books/books.page.scss
@@ -19,11 +19,16 @@ ion-card {
 }
 
 
-.wishlist {
+.wishlist-icon {
     float: right;
-    margin-top: 0px;
-    width: 35px;
-    margin-bottom: 0px;
-    height: 35px;
+    width: 50px;
+    height: 40px;
     color: var(--ion-color-secondary);
+}
+
+.wishlist-button{
+    float: right;
+    margin-right: -25px;
+    height: 50px;
+    width: 93px;
 }
