using margins instead of width for cards

--- a/src/app/pages/books/books.page.html
+++ b/src/app/pages/books/books.page.html
@@ -38,6 +38,7 @@
     <ion-select-option value="priceAscending">Price (Ascending)</ion-select-option>
     <ion-select-option value="priceDescending">Price (Descending)</ion-select-option>
   </ion-select>
+  <div style="height: 20px;"></div>
   <ion-col>
     <ion-card button *ngFor="let book of books | filter:term" (click)="openBookDetailsPage(book.isWishlisted, book.id)">
       <ion-card-content>
