--- a/src/app/pages/books/books.page.scss
+++ b/src/app/pages/books/books.page.scss
@@ -2,7 +2,6 @@
     width: 200px;
     float: right;
     margin-right: 20px;
-    margin-bottom: 20px;
 }
 
 /* Set the placeholder color and opacity */
@@ -15,7 +14,8 @@ ion-select::part(text) {
 }
 
 ion-card {
-    width: 95%;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 
