Added app title to list page, added app icon

--- a/src/app/pages/books/books.page.html
+++ b/src/app/pages/books/books.page.html
@@ -18,11 +18,11 @@
 
 <ion-content [fullscreen]="true">
   <div class="banner">
-    <img src="../../../assets/appBanner.png">
-    <div class="caption" ion-padding>
+    <img class="app-title" src="../../../assets/appTitle.png">
+    <!-- <div class="caption" ion-padding>
       Conors <br>
       Library
-    </div>
+    </div> -->
     <div class="search">
       <ion-item lines="none" class="ion-no-padding">
         <ion-icon slot="start" name="search-outline"></ion-icon>
