--- a/src/app/pages/books/books.page.scss
+++ b/src/app/pages/books/books.page.scss
@@ -1,8 +1,4 @@
-.dropdown {
-    width: 200px;
-    float: right;
-    margin-right: 20px;
-}
+
 
 /* Set the placeholder color and opacity */
 ion-select::part(placeholder) {
@@ -31,4 +27,29 @@ ion-card {
     margin-right: -25px;
     height: 50px;
     width: 93px;
+}
+
+
+
+.options-bar {
+    --background: transparent;
+
+    .dropdown {
+        width: 165px;
+        float: right;
+        margin-right: 20px;
+        --background: transparent;
+    }
+
+    .wishlist-toggle{
+        float: left; 
+        width: 155px; 
+        height: 50px; 
+        --background: transparent;
+        margin-right: auto;
+    }
+}
+
+.book-list {
+    padding: 0;
 }
