--- a/src/global.scss
+++ b/src/global.scss
@@ -28,12 +28,12 @@
 @font-face {
     font-family: 'Joan Regular';
     src: url("assets/fonts/Joan-Regular.ttf");
-  }
-  
-  @font-face {
+}
+
+@font-face {
     font-family: 'Play Fair Display';
     src: url("assets/fonts/PlayfairDisplay-VariableFont_wght.ttf");
-  }
+}
 
 :root {
     --ion-font-family: "Joan Regular";
@@ -54,24 +54,25 @@ ion-header {
 }
 
 ion-content {
-    
+
     .banner {
         position: relative;
         background-image: url(assets/appBanner.png);
         background-position: center;
         background-size: cover;
         margin-bottom: 30px;
-        width:100%;
-        height:210px;
+        width: 100%;
+        height: 210px;
         text-align: center;
-        .app-title{
+
+        .app-title {
             width: 250px;
             margin-top: 50px;
         }
     }
 
     .caption {
-        position:absolute;
+        position: absolute;
         width: 100%;
         bottom: 55px;
         font-size: 26px;
@@ -82,14 +83,14 @@ ion-content {
     }
 
     .subCaption {
-        position:absolute;
+        position: absolute;
         width: 100%;
         bottom: 20px;
         font-size: 20px;
         font-family: "Joan Regular";
         color: white;
         text-align: center;
-        
+
     }
 
     .search {
@@ -100,11 +101,11 @@ ion-content {
         margin: 16px 26px 16px 26px;
         padding: 5px 16px 5px 16px;
         border-radius: 10px;
-        box-shadow:0px 3px 12px 2px rgba(0, 0, 0, 0.16);
+        box-shadow: 0px 3px 12px 2px rgba(0, 0, 0, 0.16);
     }
 
     ion-item {
-        --inner-padding-end: 0 !important;  
+        --inner-padding-end: 0 !important;
     }
 
     ion-input {
@@ -113,7 +114,7 @@ ion-content {
 
     ion-card {
         border-radius: 12px;
-        box-shadow:0px 4px 12px 2px rgba(0, 0, 0, 0.16);
+        box-shadow: 0px 4px 12px 2px rgba(0, 0, 0, 0.16);
         margin-left: 0 auto !important;
         margin-right: 0 auto !important;
 
@@ -123,14 +124,14 @@ ion-content {
                 font-size: 18px;
                 font-weight: bold;
                 font-family: "Joan Regular";
-                margin-bottom: 5px; 
+                margin-bottom: 5px;
             }
-            
+
             .author {
                 color: var(--ion-color-secondary);
                 font-family: "Joan Regular";
                 font-size: 16px;
-                margin-bottom: 5px; 
+                margin-bottom: 5px;
             }
 
             .price {
@@ -138,7 +139,7 @@ ion-content {
                 font-family: "Play Fair Display" !important;
                 font-weight: bold;
                 font-size: 14px;
-                margin-bottom: 5px; 
+                margin-bottom: 5px;
             }
 
             .isbn {
@@ -153,7 +154,7 @@ ion-content {
                 font-family: "Play Fair Display" !important;
                 font-weight: bold;
                 font-size: 16px;
-                margin-bottom: 5px; 
+                margin-bottom: 5px;
             }
         }
     }
@@ -167,12 +168,13 @@ ion-content {
     height: 100%;
     width: 100%;
     margin-top: 30px;
+
     .error-notice-title {
         font-size: 30px;
     }
 
     .error-notice-subtitle {
         font-size: 20px;
-        color: rgba(0,0,0,0.7);
+        color: rgba(0, 0, 0, 0.7);
     }
 }
